--- a/src/screens/Main.css
+++ b/src/screens/Main.css
@@ -55,5 +55,9 @@ justify-content: space-evenly;
     margin-left: 11.9%;
 }
 
-
-
+Button{
+    padding: 1%;
+    margin: 0% 20%;
+    width: 60%;
+    margin-bottom:2%
+}
