--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
  background-color: aliceblue;
  align-items: center;
  text-align: center;
+ background-color: rgb(122,218,243);
 }
 
 code {
